Imported Debian patch 1.0.0-2

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+unbound (1.0.0-2) unstable; urgency=low
+
+  * Fix Build-Deps.
+  * Split unbound-host into a separate package.
+
+ -- Robert S. Edmonds <edmonds@debian.org>  Sun, 25 May 2008 16:12:21 -0400
+
 unbound (1.0.0-1) unstable; urgency=low
 
   * Initial release; closes: #482277.
