Imported Debian patch 1.0.1-2

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+unbound (1.0.1-2) unstable; urgency=low
+
+  * unbound tries too hard to chroot(); ship a default config that doesn't
+    fail to start on new installs; closes: #492243.
+
+ -- Robert S. Edmonds <edmonds@debian.org>  Sat, 02 Aug 2008 17:46:24 -0400
+
 unbound (1.0.1-1) unstable; urgency=low
 
   * New upstream release.
