--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+unbound (1.2.1-2) unstable; urgency=low
+
+  * Closes: #527753, #509535.
+
+ -- Robert S. Edmonds <edmonds@debian.org>  Sat, 09 May 2009 16:46:32 -0400
+
 unbound (1.2.1-1) unstable; urgency=low
 
   * New upstream release.
