--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+unbound (1.4.1-2) unstable; urgency=low
+
+  * Invoke dh_installinit with --restart-after-upgrade; closes: #563033.
+
+ -- Robert S. Edmonds <edmonds@debian.org>  Tue, 29 Dec 2009 21:54:26 -0500
+
 unbound (1.4.1-1) unstable; urgency=low
 
   * New upstream release.
