--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+unbound (1.4.8-3) unstable; urgency=low
+
+  * Convert packaging to git.
+
+ -- Robert S. Edmonds <edmonds@debian.org>  Mon, 21 Feb 2011 19:19:54 -0500
+
 unbound (1.4.8-2) unstable; urgency=low
 
   * Add build-dependency on libexpat1-dev; closes: #612261.
