debian/changelog: python changes

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,9 @@
 unbound (1.4.8-3) unstable; urgency=low
 
   * Convert packaging to git.
+  * Configure with --with-pythonmodule.
+  * Configure with --with-pyunbound.
+  * Build new python-unbound package; closes: #542094.
   * Automatically create and remove remote control key material on package
     configuration and package purge.
   * Set default remote control port to 53953 to avoid conflicting with the
@@ -9,7 +12,7 @@ unbound (1.4.8-3) unstable; urgency=low
     starting the unbound daemon if ROOT_TRUST_ANCHOR_UPDATE is set in
     /etc/default/unbound.
 
- -- Robert S. Edmonds <edmonds@debian.org>  Mon, 21 Feb 2011 21:49:14 -0500
+ -- Robert S. Edmonds <edmonds@debian.org>  Mon, 21 Feb 2011 22:28:01 -0500
 
 unbound (1.4.8-2) unstable; urgency=low
 
