--- a/debian/changelog
+++ b/debian/changelog
@@ -19,8 +19,9 @@ unbound (1.4.9-1) unstable; urgency=low
   * Don't exit from the init script with an error if UNBOUND_ENABLE is not
     true; default UNBOUND_ENABLE to true if the default file is missing
     entirely; closes: #618815.
+  * Support /etc/init.d/unbound reload; closes: #620256.
 
- -- Robert S. Edmonds <edmonds@debian.org>  Sat, 02 Apr 2011 20:24:59 -0400
+ -- Robert S. Edmonds <edmonds@debian.org>  Sat, 02 Apr 2011 20:30:56 -0400
 
 unbound (1.4.8-2) unstable; urgency=low
 
