--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+unbound (1.4.11-1) unstable; urgency=low
+
+  * New upstream release.
+  * Fix FTBFS with default python >> 2.6; closes: #625520.
+
+ -- Robert S. Edmonds <edmonds@debian.org>  Sun, 03 Jul 2011 16:32:49 -0400
+
 unbound (1.4.10-1) unstable; urgency=low
 
   * New upstream release:
