--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+unbound (1.4.13-1) unstable; urgency=low
+
+  * New upstream release.
+  * Only install forwarders learned from resolvconf into unbound if
+    RESOLVCONF_FORWARDERS is enabled in /etc/default/unbound; closes: #637198.
+  * Split unbound-anchor utility into separate binary package.
+  * Support multi-arch.
+  * Fix FTBFS with dpkg-dev 1.16.1.
+
+ -- Robert S. Edmonds <edmonds@debian.org>  Sun, 23 Oct 2011 16:55:45 -0400
+
 unbound (1.4.12-1) unstable; urgency=medium
 
   * New upstream release.
