--- a/doc/TODO
+++ b/doc/TODO
@@ -54,6 +54,10 @@ o EVP hardware crypto support.
 
 Features soon after 1.0.
 o EDNS fallback after timeout (firewall drops all edns traffic problem).
+o IPv6 reverse, IP4 reverse local-data shorthand for PTR records (?).
+  cumbersome to reverse notate by hand for the operator.
+o zone name appending for local-data. Perhaps read zonefiles. Perhaps it is
+  too much authority feature creep.
 
 For 1.x; features that have been requested during the beta test.
 o command channel for couple of tasks. Like rndc.
@@ -65,3 +69,8 @@ o command channel for couple of tasks. Like rndc.
   o add/del static preload data to change the domain redirections.
   o and maybe also start, stop, reload.
 
+
+o on windows version, libunbound uses a NamedPipe, examine security status
+  make sure the OS makes it safe like on unix.
+o on windows version, implement that OS ancillary data capabilities for
+  interface-automatic. IPPKTINFO, IP6PKTINFO for WSARecvMsg, WSASendMsg.
