--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+unbound (1.4.14-1) unstable; urgency=high
+
+   * New upstream release.
+     - CVE-2011-4528.
+   * Call dh_python2 in debian/rules; closes: #652294.
+
+ -- Robert S. Edmonds <edmonds@debian.org>  Mon, 19 Dec 2011 11:00:46 -0500
+
 unbound (1.4.13-2) unstable; urgency=low
 
   * Reduce the run-time dependencies of libunbound and the unbound-*
