--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+unbound (1.4.17-1) unstable; urgency=low
+
+  * New upstream release; closes: #674434.
+  * Implement 'status' command in init script; closes: #666388.
+  * Fix build system bug that negated fully hardening the build;
+    closes: #658021. (Patch from Simon Ruderich.)
+  * Build-depend on libldns-dev (>= 1.6.13~) for ECDSA support.
+
+ -- Robert S. Edmonds <edmonds@debian.org>  Thu, 24 May 2012 14:34:43 -0400
+
 unbound (1.4.16-2) unstable; urgency=low
 
   * Enable hardened build flags; closes: #658021.
