debian/changelog: 1.4.17-1: disable ECDSA

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,9 +4,10 @@ unbound (1.4.17-1) unstable; urgency=low
   * Implement 'status' command in init script; closes: #666388.
   * Fix build system bug that negated fully hardening the build;
     closes: #658021. (Patch from Simon Ruderich.)
-  * Build-depend on libldns-dev (>= 1.6.13~) for ECDSA support.
+  * Disable ECDSA support (for now) as this requires a newer ldns than is in
+    the archive.
 
- -- Robert S. Edmonds <edmonds@debian.org>  Thu, 24 May 2012 14:34:43 -0400
+ -- Robert S. Edmonds <edmonds@debian.org>  Sun, 27 May 2012 16:41:41 -0400
 
 unbound (1.4.16-2) unstable; urgency=low
 
