--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+unbound (1.4.17-2) unstable; urgency=low
+
+  * Build-depend on libldns-dev (>= 1.6.13~) for ECDSA support.
+
+ -- Robert S. Edmonds <edmonds@debian.org>  Mon, 28 May 2012 14:19:57 -0400
+
 unbound (1.4.17-1) unstable; urgency=low
 
   * New upstream release; closes: #674434.
